--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="menu_text_home">Home</string>
     <string name="menu_text_cooking">Cocinando</string>
     <string name="menu_text_more">Más</string>
+    <string name="add_receta">Añadir nueva receta</string>
+    <string name="content_description_receta">Imagen de la receta</string>
+    <string name="placeholderText_nombreReceta">Nombre de Receta</string>
+    <string name="placeholderText_TiempoPrepReceta">Tiempo de preparacion: XX x</string>
+    <string name="placeholderText_kcalReceta">Calorias estimadas: XXX kcal</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nombre_receta_label">Nombre</string>
+    <string name="autor_receta_label">Autor</string>
+    <string name="categoria_receta_label">Categoria</string>
 </resources>
