Progreso con visualizar receta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="medida_receta_label">Medida</string>
     <string name="siguiente">Siguiente</string>
     <string name="menu_text_healthy_lifestyle">Vida Saludable</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
