--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,11 @@
     <string name="add_receta">Añadir nueva receta</string>
     <string name="content_description_receta">Imagen de la receta</string>
     <string name="placeholderText_nombreReceta">Nombre de Receta</string>
+    <string name="placeholderText_autorReceta">Autor de Receta</string>
     <string name="placeholderText_TiempoPrepReceta">Tiempo de preparacion: %1$s m</string>
     <string name="placeholderText_kcalReceta">Calorias estimadas: %1$s kcal</string>
+    <string name="pending">Pendiente</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="nombre_receta_label">Nombre</string>
     <string name="autor_receta_label">Autor</string>
@@ -17,7 +20,8 @@
     <string name="tiempo_receta_label">Tiempo</string>
     <string name="pasos_receta_label">Pasos</string>
     <string name="medida_receta_label">Medida</string>
-    <string name="siguiente">Siguiente</string>
+    <string name="next">Siguiente</string>
+    <string name="finish">Terminar</string>
     <string name="menu_text_healthy_lifestyle">Vida Saludable</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -26,4 +30,10 @@
     <string name="no">No</string>
     <string name="yes">Si</string>
     <string name="delete_recipe_dialog_msg">Desea eliminar esta receta?</string>
+    <string name="preparation_label">Preparacion:</string>
+    <string name="placeholderText_tiempoEst">Tiempo estimado:</string>
+    <string name="ingridient_label">Ingredientes:</string>
+    <string name="placeholderText_ingrediente">Un ingrediente - cant med</string>
+    <string name="edit_details">Editar Detalles</string>
+    <string name="agregar_paso">Agregar Paso</string>
 </resources>
