--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="no">No</string>
     <string name="yes">Si</string>
     <string name="delete_recipe_dialog_msg">Desea eliminar esta receta?</string>
+    <string name="conf_exit_recipe_dialog_msg">Sus ediciones actuales seran guardadas pero la receta permanecera pendiente. Seguro que desea salir? </string>
     <string name="preparation_label">Preparacion:</string>
     <string name="placeholderText_tiempoEst">Tiempo estimado:</string>
     <string name="ingridient_label">Ingredientes:</string>
