--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="good_morning_label">Buenos Dias,</string>
     <string name="good_afternoon_label">Buenas Tardes,</string>
     <string name="good_evening_label">Buenas Noches,</string>
+    <string name="your_recipes_label">Tus Recetas</string>
 </resources>
