--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,8 @@
     <string name="good_afternoon_label">Buenas Tardes,</string>
     <string name="good_evening_label">Buenas Noches,</string>
     <string name="your_recipes_label">Tus Recetas</string>
+    <string name="placeholder_time">XX:XX:XX</string>
+    <string name="order_ingredients_label">Ordena tus ingredientes!</string>
+    <string name="next_step">Siguiente Paso</string>
+    <string name="start_step">Comenzar Paso</string>
 </resources>
