--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="delete_recipe_dialog_msg">Desea eliminar esta receta?</string>
     <string name="delete_ingredient_dialog_msg">Desea eliminar este ingrediente?</string>
     <string name="conf_exit_recipe_dialog_msg">Sus ediciones actuales seran guardadas pero la receta permanecera pendiente. Seguro que desea salir? </string>
+    <string name="conf_exit_cooking_recipe_dialog_msg">El paso a cocinar se guardara y se reiniciara el tiempo de preparacion transcurrido. Seguro que desea salir? </string>
     <string name="preparation_label">Preparacion:</string>
     <string name="placeholderText_tiempoEst">Tiempo estimado:</string>
     <string name="placeholderText_TiempoComidaReceta">Tiempo de Comida: %s</string>
